# cloudstate-cpp-support

./: .travis.yml  README.md  gen_proto.sh
.github/workflows/: codeql-analysis.yml  main.yml
src/: CMakeLists.txt  main.cpp
src/cloudstate/proto/frontend/cloudstate/: entity_key.grpc.pb.cc  entity_key.grpc.pb.h
src/cloudstate/proto/protocol/cloudstate/: crdt.grpc.pb.cc  crdt.grpc.pb.h  entity.grpc.pb.cc  entity.grpc.pb.h  entity.pb.cc  entity.pb.h  event_sourced.grpc.pb.cc  event_sourced.grpc.pb.h  event_sourced.pb.cc  event_sourced.pb.h  function.grpc.pb.cc  function.grpc.pb.h
tck/: Dockerfile  build_docker_image.sh  run_dev_proxy_tck.sh  run_tck.sh
understanding-aws-lambda/: .gitignore
understanding-aws-lambda/src/example/: Hello.java
understanding-aws-lambda/tools/: lambda.sh
understanding-grpc/: remarks.txt
understanding-grpc/config/: Makefile
understanding-grpc/scripts/: protoc.sh
understanding-grpc/src/: first-client.cc  first-server.cc  first-service.cc  first.cc
understanding-grpc/src/proto/: first.proto
